export enum MealEatTimeType {
    BREAKFAST,
    LUNCH,
    DINNER,
    SUPPER,
    OTHERS
}
